# doapetry

./: README.md  doap.ttl  doapetry.py  pyproject.toml
