[project]
name = "doapetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Natanael Arndt",email = "arndtn@gmail.com"}
]
license = {text = "EUPL-1.2"}
readme = "README.md"
requires-python = ">=3.9,<4.0.0"
dependencies = [
    "rdflib (>=7.1.4,<8.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyproject-parser (>=0.13.0,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
